# hawaii-shell

./: CMakeLists.txt  README.md
compositor/: CMakeLists.txt  main.cpp
compositor/loginmanager/: loginmanager.cpp
compositor/powermanager/: powermanager.cpp
data/: CMakeLists.txt
declarative/launcher/: CMakeLists.txt
framework/controls/: Heading.qml
shell/: Indicator.qml  RunCommand.qml  WindowSwitcher.qml
shell/components/: Clock.qml  Overlay.qml  ToolButton.qml
shell/controlcenter/: CalendarView.qml  ControlCenter.qml
shell/desktop/: Desktop.qml  Output.qml  ScreenView.qml  Shell.qml  WorkspacesView.qml
shell/error/: ErrorScreen.qml
shell/indicators/: EventsIndicator.qml  NetworkIndicator.qml  StorageIndicator.qml
shell/indicators/events/: EventItem.qml  NotificationItem.qml
shell/indicators/network/: AirplaneMode.qml  ConnectionItem.qml  Header.qml
shell/indicators/power/: BatteryEntry.qml
shell/indicators/sound/: MprisItem.qml  VolumeControl.qml
shell/launcher/: LauncherCategories.qml  LauncherDelegate.qml  LauncherGridDelegate.qml  LauncherMenu.qml  LauncherPopOver.qml
shell/screens/: LockScreen.qml  LogoutScreen.qml  SplashScreen.qml
shell/windows/: WindowMenu.qml
src/client/: shellclient.cpp  shellclient.h
src/client/wayland/: panelsurface.cpp  panelsurface.h
src/compositor/: clientwindow.cpp  clientwindow.h  panelmanager.cpp  panelmanager.h  shell.cpp  shell.h  shellpanelsurface.cpp  shellpanelsurface.h  shellsurface.cpp  shellsurface.h
themes/sddm/hawaii/: Main.qml
